# HedgeLib

./: .editorconfig  .gitignore  CMakeLists.txt  Get-Dependencies.ps1  HedgeLib.sln  LICENSE.txt  License.txt  README.md  THIRD-PARTY-LICENSES.txt  Third-Party-Licenses.txt  appveyor.yml  options.lua  premake5.lua  qt.lua
HedgeLib/: .editorconfig  CMakeLists.txt  ExtendedBinary.cs  FileBase.cs  GensHeader.cs  Half.cs  HalfHelper.cs  HedgeLib.csproj  Helpers.cs  MathHelpers.cs  Quaternion.cs  Types.cs  Vector.cs  XMLHelpers.cs  premake5.lua
HedgeLib/Animations/: GensAnimation.cs  MaterialAnimation.cs  UVAnimation.cs  VisibilityAnimation.cs
HedgeLib/Archives/: Archive.cs  ArchiveData.cs  ArchiveDirectory.cs  ArchiveFile.cs  ForcesArchive.cs  GensArchive.cs  LWArchive.cs  ONEArchive.cs  S06Archive.cs  SBArchive.cs
HedgeLib/Bases/: ColorsFileBase.cs  FileBase.cs  Gens.cs  GensFileBase.cs  IGameFormatBase.cs  LWFileBase.cs
HedgeLib/Collison/: Havok.cs
HedgeLib/Exceptions/: InvalidSignatureException.cs
HedgeLib/Havok/: HavokBinary.cs  HavokData.cs  HavokFile.cs  HavokGenericTypes.cs  HavokPackFile.cs  HavokTagFile.cs  HavokXML.cs
HedgeLib/Headers/: BINAHeader.cs  BINAv1Header.cs  BINAv2Header.cs  ColorsHeader.cs  GensHeader.cs  HedgehogEngineHeader.cs  IHeader.cs  LWHeader.cs  MirageHeader.cs  PACxHeader.cs
HedgeLib/IO/: BINA.cs  ExtendedBinary.cs  FileBase.cs  Gens.cs
HedgeLib/Lights/: GensLightList.cs  Light.cs
HedgeLib/Materials/: GensMaterial.cs
HedgeLib/Math/: AABB.cs
HedgeLib/Misc/: BINA.cs  FXCol.cs  ForcesGISM.cs  ForcesText.cs  GensPFI.cs  GensStageXML.cs  LWGism.cs  S06FontPicture.cs  S06Package.cs
HedgeLib/Models/: GensModel.cs  Mesh.cs  Model.cs
HedgeLib/Properties/: AssemblyInfo.cs
HedgeLib/RFL/: ForcesCaptionParam.cs  ForcesDLCParam.cs  ForcesRFL.cs  ForcesStageScore.cs  ForcesWorldmapDiscuss.cs
HedgeLib/Sets/: ColorsSetData.cs  ForcesSetData.cs  GensSetData.cs  HeroesSetData.cs  LWSetData.cs  S06SetData.cs  SOBJ.cs  SetData.cs  SetObject.cs  SetObjectType.cs
HedgeLib/Sound/: ColorsSNDL.cs
HedgeLib/Sprites/: ManiaSprite.cs
HedgeLib/Terrain/: GensTerrainGroup.cs  GensTerrainInstanceInfo.cs  GensTerrainList.cs
HedgeLib/Textures/: DDS.cs  GensTexset.cs  GensTexture.cs  Texture.cs
HedgeLib/include/: Helpers.h  Offsets.h  Reflect.h  helpers.h  offsets.h  reflect.h
HedgeLib/include/Archives/: ArchiveBase.h  IArchive.h  LWArchive.h  PAC.h  archive.h  archiveBase.h  lwArchive.h  pac.h
HedgeLib/include/Geometry/: HHMesh.h  HHModel.h  HHSubMesh.h  IMesh.h  IModel.h  ISubMesh.h  SubMesh.h  VertexFormat.h
HedgeLib/include/HedgeLib/: Array.h  Blob.h  Endian.h  Errors.h  HedgeLib.h  Helpers.h  Memory.h  Offsets.h  Result.h  String.h  StringTable.h
HedgeLib/include/IO/: BINA.h  DataSignature.h  Endian.h  File.h  FileBase.h  HedgehogEngine.h  IFileFormat.h  Nodes.h  bina.h  dataSignature.h  endian.h  file.h  fileBase.h  hedgehogEngine.h  nodes.h  offsets.h
HedgeLib/include/Math/: AABB.h  Matrix.h  Vector.h
HedgeLib/include/Shaders/: ForcesShader.h  IShader.h  IShaderVariant.h
HedgeLib/include/hedgelib/: hl_array.h  hl_blob.h  hl_compress_type.h  hl_compression.h  hl_endian.h  hl_guid.h  hl_in_c89_stdint.h  hl_in_math_vector_macros.h  hl_internal.h  hl_languages_autogen.h  hl_list.h  hl_math.h  hl_memory.h  hl_ordered_map.h  hl_radix_tree.h  hl_reflect.h  hl_resource.h  hl_scene.h  hl_tables.h  hl_text.h  hl_tool_helpers.h
HedgeLib/src/: Array.cpp  Blob.cpp  Errors.cpp  INBlob.h  INCP932Mappings.h  INErrors.h  INString.h  Memory.cpp  Offsets.cpp  String.cpp  StringTable.cpp  hl_blob.c  hl_blob.cpp  hl_compression.c  hl_compression.cpp  hl_endian.c  hl_guid.cpp  hl_in_assert.h  hl_in_blob.h  hl_in_pch.h  hl_in_posix.c  hl_in_posix.h  hl_in_tool_common_text.h  hl_in_win32.c  hl_in_win32.h  hl_internal.c  hl_internal.cpp  hl_list.c  hl_math.c  hl_math.cpp  hl_memory.c  hl_offsets.c  hl_radix_tree.c  hl_radix_tree.cpp  hl_reflect.cpp  hl_resource.cpp  hl_scene.cpp  hl_text.c  hl_text.cpp  hl_tool_helpers.cpp  (+1 more)
HedgeLib/src/Archives/: Archive.cpp  ForcesArchive.cpp  GensArchive.cpp  HHArchive.cpp  INArchive.h  INPACx.h  LWArchive.cpp  PACx.cpp  lwArchive.cpp
HedgeLib/src/Geometry/: HHMesh.cpp  HHModel.cpp  HHSubMesh.cpp  IMesh.cpp  ISubMesh.cpp
HedgeLib/src/IO/: BINA.cpp  File.cpp  FileBase.cpp  HedgehogEngine.cpp  IFileFormat.cpp  INBINA.h  INPath.h  Path.cpp  (+5 more)
HedgeRender/: CMakeLists.txt  backends.lua  link.lua  options.lua  premake5.lua
HedgeRender/backends/: hr_in_dxgi_autogen.h
HedgeRender/base/: CMakeLists.txt
HedgeRender/depends/: robin_hood.h
HedgeRender/ext/: CMakeLists.txt
HedgeRender/gfx/: CMakeLists.txt
HedgeRender/src/: hr_camera.cpp  hr_color.cpp  hr_draw_item.cpp  hr_in_window_win32.h  hr_resource.cpp  hr_state_group.cpp  hr_window.cpp
HedgeTools/: CMakeLists.txt  TranslatorsGuide.md  hedgetools_helpers.h  premake5.lua
HedgeTools/ForcesGISMEditor/: App.xaml  App.xaml.cs  ForcesGISMEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
HedgeTools/ForcesSCFNTConverter/: ForcesSCFNTConverter.csproj  Program.cs
HedgeTools/ForcesSCFNTGenerator/: ForcesSCFNTGenerator.csproj  Program.cs
HedgeTools/HedgeArcPack/: CMakeLists.txt  Commands.Functions.cs  Commands.cs  HedgeArcPack.csproj  Program.cs  Resources.Designer.cs  Resources.resx  Types.cs  premake5.lua
HedgeTools/HedgeArchiveEditor/: Addon.cs  HedgeArchiveEditor.csproj  MainFrm.Designer.cs  MainFrm.cs  MainFrm.resx  Program.cs  SaveOptions.Designer.cs  SaveOptions.cs
HedgeTools/HedgeCnvrsEditor/: HedgeCnvrsEditor.csproj  MainFrm.Designer.cs  MainFrm.cs  MainFrm.resx  ParameterEditor.Designer.cs  ParameterEditor.cs  Program.cs
HedgeTools/HedgeEdit/: premake5.lua
HedgeTools/HedgeGISMEditor/: EditGismoFrm.Designer.cs  EditGismoFrm.cs  HedgeGISMEditor.csproj  MainFrm.Designer.cs  MainFrm.cs  Program.cs
HedgeTools/HedgeNeedle/: CMakeLists.txt
HedgeTools/HedgeOffsets/: premake5.lua
HedgeTools/HedgePFD/: HedgePFD.csproj  Program.cs
HedgeTools/HedgeSCFNTConverter/: HedgeSCFNTConverter.csproj  Program.cs
HedgeTools/HedgeSet/: CMakeLists.txt
(+873 files in other folders)
